fix: vertical align for mobile

--- a/src/components/FullScreenGallery.module.scss
+++ b/src/components/FullScreenGallery.module.scss
@@ -93,3 +93,10 @@
     }
   }
 }
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
